<resources>
    <string name="app_name">MyProfile</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="id_input">아이디를 입력하세요.</string>
    <string name="pw_input">비밀번호를 입력하세요.</string>
    <string name="name_input">이름을 입력하세요.</string>

    <string name = "id_e">ID</string>
    <string name = "name_e">NAME</string>
    <string name = "age_e">AGE</string>
    <string name = "MBTI_e">MBTI</string>

    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="finish">종료</string>
</resources>